<?xml version="1.0"?>
<package format="2">
  <name>image_preprocess</name>
  <version>0.1.0</version>
  <description>Image preprocessing node (Gamma + CLAHE)</description>

  <maintainer email="you@example.com">your name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
</package>

